# musetalk-client-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  composite-video.sh  examples.md  generate-lipsync.sh  stretch.sh
backend/: .dockerignore  Dockerfile  README.md  build.sh  docker-compose.yml  download_models.sh  run.sh  server.py  stop.sh
docs/: ai_agent_instructions.md  architecture.md  design.md  plan.md  prd.md  research.txt  status.md
src/: cli.rs  error.rs  lib.rs  main.rs  validation.rs
src/assembler/: mod.rs
src/client/: mod.rs  types.rs
src/loader/: audio.rs  image.rs  mod.rs  video.rs
