[package]
name = "musetalk-cli"
version = "0.1.0"
edition = "2024"
description = "CLI client for MuseTalk lip-sync video generation"
license = "MIT"
repository = "https://github.com/softwarewrighter/musetalk-client-rs"

[[bin]]
name = "musetalk-cli"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
