[package]
name = "musetalk-cli"
version = "0.1.0"
edition = "2024"
description = "CLI client for MuseTalk lip-sync video generation"
license = "MIT"
repository = "https://github.com/softwarewrighter/musetalk-client-rs"

[[bin]]
name = "musetalk-cli"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image processing
image = "0.25"

# Audio processing
hound = "3"

# Base64 encoding
base64 = "0.22"

# Temp files
tempfile = "3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
